feat: Implementación endpoint por dependencia
https://github.com/udistrital/argo_documentacion/issues/275
