# src/supervisor/dto/supervisor-dto.ts
@@ -1,15 +1,20 @@
-import { IsOptional, IsString, IsBoolean } from 'class-validator';
+import { IsString, IsNotEmpty, IsDateString } from 'class-validator';
+import { ApiProperty } from '@nestjs/swagger';
 
 export class SupervisorQueryDto {
-  @IsBoolean()
-  @IsOptional()
-  Estado?: boolean;
-
   @IsString()
-  @IsOptional()
-  SedeSupervisor?: string;
+  @IsNotEmpty()
+  @ApiProperty({
+    description: 'ID de la dependencia',
+    example: 'DEP123',
+  })
+  dependencia: string;
 
-  @IsString()
-  @IsOptional()
-  DependenciaSupervisor?: string;
+  @IsDateString()
+  @IsNotEmpty()
+  @ApiProperty({
+    description: 'Fecha de consulta (YYYY-MM-DD)',
+    example: '2024-12-29',
+  })
+  fecha: string;
 }
